# life

./: .gitignore  CMakeLists.txt  README.md
include/: grid.h
src/: editor.cpp  grid.cpp  main.cpp
